Fixed vertical spacing

--- a/src/WebComponents/PersistentObjectGroup/persistent-object-group.scss
+++ b/src/WebComponents/PersistentObjectGroup/persistent-object-group.scss
@@ -29,7 +29,7 @@
         display: grid;
         grid-template-areas: var(--vi-persistent-object-group--grid-areas);
         grid-auto-columns: 1fr;
-        grid-gap: var(--vi-persistent-object-group--attribute-padding, var(--theme-h4));
+        grid-gap: 0 var(--vi-persistent-object-group--attribute-padding, var(--theme-h4));
 
         vi-persistent-object-attribute-presenter {
             grid-area: var(--vi-persistent-object-group--attribute-area);
